--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -20,11 +20,16 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>Putting a logo, design, and other information about brand on custom t-shirts, mugs, caps, plates, key-holders, etc. helps companies to create brand awareness and draw attention. It also allow both companies and individuals to communicate messages in a more casual and friendly way.</p>
+    <p>Putting a logo, design, and other information about brand on custom t-shirts, mugs, caps, plates, key-holders, etc.
+      helps companies to create brand awareness and draw attention. It also allow both companies and individuals to
+      communicate messages in a more casual and friendly way.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>The targeted audience for this business consists of men and women all age, any social class and regardless of their religion, and companies; likely with strong interests in clothing, food, and design. These interests included also distribution and sale in art, music, advertisement, festivals, and any events. Customers will access the service online via website, and walk-in in store</p>
+    <p>The targeted audience for this business consists of men and women all age, any social class and regardless
+      of their religion, and companies; likely with strong interests in clothing, food, and design. These interests
+      included also distribution and sale in art, music, advertisement, festivals, and any events. Customers will
+      access the service online via website, and walk-in in store</p>
     <!-- change this -->
 
     <hr />
