--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>BINTU HOUSE Site Plan</h1>
+    <h1>DOWN THE RIVER Site Plan</h1>
     <h2>Michel Biselela</h2>
     <h2>WDD 130-01</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
@@ -20,23 +20,23 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>Putting a logo, design, and other information about brand on custom t-shirts, mugs, caps, plates, key-holders, etc.
-      helps companies to create brand awareness and draw attention. It also allow both companies and individuals to
-      communicate messages in a more casual and friendly way.</p>
+    <p>Water rafting adventure in Pretoria is a recreational outdoor activity in Pretoria where people can navigate
+      taking pick from the many rivers, conveniently situated nearby. The Vaal river and Crocodiles river in Gauteng
+      as well as the Sabie river, Blyde river and Olifants river in Mpumalanga are all great choices for one day or
+      multi-day paddles. Dealing with risk is often a part of the experience.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>The targeted audience for this business consists of men and women all age, any social class and regardless
-      of their religion, and companies; likely with strong interests in clothing, food, and design. These interests
-      included also distribution and sale in art, music, advertisement, festivals, and any events. Customers will
-      access the service online via website, and walk-in in store</p>
+    <p>Minimum age is 8, and that is with parental supervision, RapiDecent Adventures reserves the right of final approval.
+      Experienced and certified guides will accompany you on the river. There is plenty of safe parking. This is a fun trip
+      for families and individuals who enjoy and love water and don't mind the odd swim.</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="BintuHouse.png" alt="Logo image" />
+    <img src="downriver.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
