--- a/Ab_out_Me/abott-me.html
+++ b/Ab_out_Me/abott-me.html
@@ -18,11 +18,10 @@
     <p></p>
     <p>I am from Pretoria (South Africa).</p>
     <p>I am married since 19 years now and am blessed with 4 girls.
-        All, my family and I live in Pretoria (South Africa).</p>
+        All, my family and I live in Pretoria, South Africa.</p>
     <p>I am skilled in graphic designer, I love "screens", cooking, and reading;</p>
     <p>I speak 5 languages: French, English, Swahili, Tshiluba, and Lingala;
-        I love learning new things and I hope I will learn a lot from you in this course.
-    <p></p>
+        I love learning new things and I hope I will learn a lot from you in this course.</p>
 <p>Michel Biselela</p>
     
 </body>
