--- a/w-w-r/site_rafting_plan.html
+++ b/w-w-r/site_rafting_plan.html
@@ -27,7 +27,7 @@
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>Minimum age is 8, and that is with parental supervision, RapiDecent Adventures reserves the right of final approval.
+    <p>Minimum age allowed is 8, and that is with parental supervision, RapiDecent Adventures reserves the right of final approval.
       Experienced and certified guides will accompany you on the river. There is plenty of safe parking. This is a fun trip
       for families and individuals who enjoy and love water and don't mind the odd swim.</p>
     <!-- change this -->
