--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@
   <a href="#">Personal Website</a>
   <a href="#">Personal Siteplan</a>
 </nav>  
-<p>Michel Biselela - WDD130</p>
+<p>Your Name Here - WDD130</p> 
