--- a/Ab_out_Me/abott-me.html
+++ b/Ab_out_Me/abott-me.html
@@ -17,7 +17,7 @@
     <h2>Bis</h2>
     <p></p>
     <p>I am from Pretoria (South Africa).</p>
-    <p>I am married since 19 years now and am blessed with 4 girls.
+    <p>I am married for 19 years now. My wife has blessed me with 4 girls.
         All, my family and I live in Pretoria, South Africa.</p>
     <p>I am skilled in graphic designer, I love "screens", cooking, and reading;</p>
     <p>I speak 5 languages: French, English, Swahili, Tshiluba, and Lingala;
