--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -59,9 +59,9 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#3df818]</td>
+        <td class="primary">[#25f70d]</td>
         <td class="secondary">[#ffe70a]</td>
-        <td class="accent1">[#ff006e]</td>
+        <td class="accent1">[#a44af8]</td>
         <td class="accent2"></td>
       </tr>
     </table>
@@ -72,11 +72,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Akronim&display
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Allerta&display
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
