--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -72,11 +72,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: Dancing+Script:wght@700
+      Heading Font: Caveat:wght@600
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: Poppins:wght@500
+      Paragraph Font: Dancing+Script:wght@700
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
