--- a/wwr/index.html
+++ b/wwr/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <a id="logo_link" href="index.html">
-      <img class="logo" src = "images/logo.png" alt="Dry Oar Logo"/>
+      <img class="logo" src = "images/logo.png" alt="Dry Oar Logo">
     </a>
     <nav>
       <a href="index.html">Home</a>
@@ -21,7 +21,7 @@
   </header>
   <div id="hero">
     <div id="hero_box">
-      <img id="hero-img" src="images/hero.png" alt="People enjoying rafting"/>
+      <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
     </div>
     <section id="hero-msg">
       <h1 class="home-title">Have An Adventure</h1>
