--- a/wwr/index.html
+++ b/wwr/index.html
@@ -32,11 +32,11 @@
     </section>
   </div>
   <main class="home-grid">
-    <section class="rivers-card">
+<!--<section class="rivers-card">
       <img class="card-img" src="images/rivers.jpg" alt="river in forest">
       <img class="icon" src="images/fire_icon.png" alt="fire icon">
       <h2>Camping</h2>
-    </section>
+    </section> -->
     <section class="rapids-card">
       <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
       <img class="icon" src="images/oars.png" alt="oars icon">
@@ -52,11 +52,11 @@
       <img class="icon" src="images/fire_icon.png" alt="fire icon">
       <h2>Camping</h2>
     </section>
-    <section class="rapids-card">
+<!--<section class="rapids-card">
       <img class="card-img" src="images/mountains.jpg" alt="rafting boat">
       <img class="icon-img" src="images/oars.png" alt="oars icon">
       <h2>Rapids</h2>
-    </section>
+    </section>-->
     <div id="background"></div>
     <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
     <section class="msg">
@@ -67,7 +67,7 @@
 
   </main>
   <footer>
-    <p>Dry Oar &copy; 2023 - Michel Biselela</p>
+    <p>Dry Oar © 2023 - Michel Biselela</p>
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
