--- a/bintu-house-design/site-plan.html
+++ b/bintu-house-design/site-plan.html
@@ -25,7 +25,7 @@
       <h3>Purpose</h3>
       <p>Putting a logo, a design, and other information about brand on custom t-shirts, mugs, caps, plates,
         key-holders, etc. helps companies to create brand awareness and draw attention. It also allow both
-        companies and individuals to communicate messages in a more casual and friendly way.</p>  <!-- change this -->
+        companies and individuals to communicate messages in a more casual and friendly way.</p>
 
 
       <h3>Audience</h3>
